deploy/overlays/minikube/registry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  labels:
    kubernetes.io/metadata.name: registry
    app.kubernetes.io/name: evenfire-registry
    app.kubernetes.io/part-of: evenfire
